--- a/cdss_1/patients/templates/patients/patient_detail.html
+++ b/cdss_1/patients/templates/patients/patient_detail.html
@@ -6,8 +6,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ patient.name }} - Patient Details</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <style>
+        body {
+            background-color: white;
+          }
+        table {
+            width: 100%;
+            text-align: center;
+        }
+
+        th, td {
+            padding: 10px;
+        }
+
+        th {
+            background-color: #f2f2f2;
+        }
+
+        tr:nth-child(odd) {
+            background-color: #f9f9f9;
+        }
+
+        tr:hover {
+            background-color: #e0e0e0;
+        }
+        
+        /* Customize the size of the alert icons */
+        .bi {
+            width: 1.5em;
+            height: 1.5em;
+        }
+    </style>
+
+
 </head>
 <body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
     <div class="container">
         <h1>{{ patient.name }}</h1>
 
@@ -22,11 +61,16 @@
         <br>
         {% if has_vitals_data %}
             <h2>Vitals Data</h2>
-            <div class="table-container">
-                <table id="vitals-table">
-                    <!-- Table content will be added dynamically using JavaScript -->
-                </table>
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+            <div class="container mt-3">
+                <div class="table-container">
+                    <table class="table table-striped table-active  table-hover" id="vitals-table">
+                        <!-- Table content will be added dynamically using JavaScript -->
+                    </table>
+                </div>
             </div>
+
         {% else %}
             <p>No vitals data available</p>
         {% endif %}
@@ -35,40 +79,81 @@
         <br>
         <br>
         <div class="additional-elements">
-            <h2>AI CDSS Prediction / Recommendation</h2>
-            <p><a href="{% url 'prediction_page' patient_id=patient.id %}">{{ patient.prediction }}</a></p>
-            <br>
-            <h2>IVOS Guidelines</h2>
-            <p><a href="{% url 'guideline_page' patient_id=patient.id %}">{{ patient.guideline }}</a></p>
+        <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
+        <symbol id="check-circle-fill" viewBox="0 0 16 16">
+            <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+        </symbol>
+        <symbol id="info-fill" viewBox="0 0 16 16">
+            <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
+        </symbol>
+        <symbol id="exclamation-triangle-fill" viewBox="0 0 16 16">
+            <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+        </symbol>
+        </svg>
+              
+        
+        <h2>Predictions and Guidelines</h2>
+        <br>
+
+        <!-- Prediction alert -->
+        <div class="alert {% if patient.prediction == 'Switch' %}alert-success{% else %}alert-danger{% endif %} d-flex align-items-center" role="alert">
+            <svg class="bi flex-shrink-0 me-2" role="img" aria-label="Prediction:">
+                {% if patient.prediction == 'Switch' %}
+                    <use xlink:href="#check-circle-fill"/>
+                {% else %}
+                    <use xlink:href="#exclamation-triangle-fill"/>
+                {% endif %}
+            </svg>
+            <div>
+                AI CDSS Prediction / Recommendation: <a href="{% url 'prediction_page' patient_id=patient.id %}" class="alert_link">{{ patient.prediction }}</a>
+            </div>
         </div>
+        <br>
+
+        <!-- Guideline alert -->
+        <div class="alert {% if patient.guideline == 'Switch' %}alert-success{% else %}alert-danger{% endif %} d-flex align-items-center" role="alert">
+            <svg class="bi flex-shrink-0 me-2" role="img" aria-label="Guideline:">
+                {% if patient.guideline == 'Switch' %}
+                    <use xlink:href="#check-circle-fill"/>
+                {% else %}
+                    <use xlink:href="#exclamation-triangle-fill"/>
+                {% endif %}
+            </svg>
+            <div>
+                IVOS Guidelines: <a href="{% url 'guideline_page' patient_id=patient.id %}" class="alert_link">{{ patient.guideline }}</a>
+            </div>
+        </div>
+        <br>
 
         <!-- User Input Section -->
-        <br>
         <h2>Your Decision</h2>
         <form id="userInputForm" method="post" action="{% url 'process_user_input' patient_id=patient.id %}">
         {% csrf_token %}
 
         <!-- Dropdown Choice -->
-        <label for="switch_choice"></label>
-        <select id="switch_choice" name="switch_choice" required>
+        <label for="switch_choice" class="form-label">Please choose an action:</label>
+        <select name="switch_choice" id="switch_choice" class="form-select" required>
             <option value="" selected disabled>Select an option</option>
             <option value="switch">Switch</option>
             <option value="dont_switch">Don't Switch</option>
         </select>
+                  
+        <br>
+        <br>
 
-        <br>
-        <br>
 
         <!-- Text Box -->
-        <label for="explanation">Please exsplain your choice:</label>
-        <textarea id="explanation" name="explanation" rows="4" cols="50"></textarea>
+        <label for="explanation" class="form-label">Please exsplain your choice:</label>
+        <input name="explanation" type="Please exsplain your choice:" id="explanation" class="form-control">
+        <!-- <label for="explanation">Please exsplain your choice:</label> -->
+        <!-- <textarea id="explanation" name="explanation" rows="4" cols="50"></textarea> -->
 
         <br>
         <br>
         <br>
 
         <!-- Submit Button -->
-        <button type="submit">Submit</button>
+        <button type="submit" class="btn btn-primary">Submit</button>
         <!-- <button type="button" onclick="validateAndSubmit()">Submit</button> -->
 
         <br>
