--- a/cdss_1/patients/templates/patients/patient_detail.html
+++ b/cdss_1/patients/templates/patients/patient_detail.html
@@ -167,7 +167,7 @@
         <br>
 
         <!-- Prediction alert -->
-        <div class="alert {% if patient.prediction == 'Switch' %}alert-success{% else %}alert-danger{% endif %} d-flex align-items-center" role="alert">
+        <div class="alert {% if patient.prediction == 'Switch' %}alert-success{% else %}alert-danger{% endif %} d-flex align-items-center" role="alert" data-alert-id="prediction">
             <svg class="bi flex-shrink-0 me-2" role="img" aria-label="Prediction:">
                 {% if patient.prediction == 'Switch' %}
                     <use xlink:href="#check-circle-fill"/>
@@ -183,7 +183,7 @@
         <br>
 
         <!-- Guideline alert -->
-        <div class="alert {% if patient.guideline == 'Switch' %}alert-success{% else %}alert-danger{% endif %} d-flex align-items-center" role="alert">
+        <div class="alert {% if patient.guideline == 'Switch' %}alert-success{% else %}alert-danger{% endif %} d-flex align-items-center" role="alert" data-alert-id="guideline">
             <svg class="bi flex-shrink-0 me-2" role="img" aria-label="Guideline:">
                 {% if patient.guideline == 'Switch' %}
                     <use xlink:href="#check-circle-fill"/>
@@ -245,54 +245,50 @@
     
         // Display CSV data in the table
         displayCsvData(vitalsDataJson);
-    
+
         // Function to display JSON data in the table
         function displayCsvData(jsonData) {
-            const table = document.getElementById("vitals-table");
+                    const table = document.getElementById("vitals-table");
 
-            // Extract metrics and time data
-            const metrics = jsonData.map(item => item["Metric / Time (hours)"]);
-            const timePoints = Object.keys(jsonData[0]).filter(key => key !== "Metric / Time (hours)");
+                    // Extract metrics and time data
+                    const metrics = jsonData.map(item => item["Metric / Time (hours)"]);
+                    const timePoints = Object.keys(jsonData[0]).filter(key => key !== "Metric / Time (hours)");
 
-            // Add table header
-            const headerRow = document.createElement("tr");
-            const th = document.createElement("th");
-            th.textContent = "Metric / Time (hours)";
-            headerRow.appendChild(th);
-            timePoints.forEach(timePoint => {
-                const th = document.createElement("th");
-                th.textContent = timePoint;
-                headerRow.appendChild(th);
-            });
-            table.appendChild(headerRow);
+                    // Add table header
+                    const headerRow = document.createElement("tr");
+                    const th = document.createElement("th");
+                    th.textContent = "Metric / Time (hours)";
+                    headerRow.appendChild(th);
+                    timePoints.forEach(timePoint => {
+                        const th = document.createElement("th");
+                        th.textContent = timePoint;
+                        headerRow.appendChild(th);
+                    });
+                    table.appendChild(headerRow);
 
-            // Add table rows
-            metrics.forEach(metric => {
-                const row = document.createElement("tr");
-                const td = document.createElement("td");
-                td.textContent = metric;
-                row.appendChild(td);
+                    // Add table rows
+                    metrics.forEach(metric => {
+                        const row = document.createElement("tr");
+                        const td = document.createElement("td");
+                        td.textContent = metric;
+                        row.appendChild(td);
 
-                timePoints.forEach(timePoint => {
-                    const td = document.createElement("td");
-                    td.textContent = jsonData.find(item => item["Metric / Time (hours)"] === metric)[timePoint];
-                    row.appendChild(td);
-                });
+                        timePoints.forEach(timePoint => {
+                            const td = document.createElement("td");
+                            td.textContent = jsonData.find(item => item["Metric / Time (hours)"] === metric)[timePoint];
+                            row.appendChild(td);
+                        });
 
-                table.appendChild(row);
-            });
-        }
+                        table.appendChild(row);
+                    });
+                }
 
         // Extract metrics and time data
         const metrics = vitalsDataJson.map(item => item["Metric / Time (hours)"]);
         const timePoints = Object.keys(vitalsDataJson[0]).filter(key => key !== "Metric / Time (hours)");
 
-        // Initialize ECharts
-        const echartsContainer = document.getElementById('echarts-container');
-        const echartsInstance = echarts.init(echartsContainer);
-
-        // Use the echartsData to create the line plot
-        echartsInstance.setOption({
+        // Set echarts options
+        options = {
             title: {
                 text: ''
             },
@@ -339,7 +335,15 @@
                 yAxisIndex: [0], // Specify the yAxisIndex for y-axis zoom
             },
         ],
-        });
+        };
+
+        // Initialize ECharts
+        // Use the echartsData to create the line plot
+        const echartsContainer = document.getElementById('echarts-container');
+        const echartsInstance = echarts.init(echartsContainer);
+
+        // Set the initial options
+        echartsInstance.setOption(options);
 
         // Echarts legend click event listener
         echartsInstance.on('legendselectchanged', function (params) {
@@ -352,6 +356,7 @@
             echartsInstance.setOption(options);
         });
 
+        // User form
         document.getElementById('userInputForm').addEventListener('submit', function(event) {
         const dropdown = document.getElementById('switch_choice');
         if (dropdown.value === "") {
@@ -364,8 +369,24 @@
         }
         });
     
-        // Click tracker
+        // Post other js
         document.addEventListener('DOMContentLoaded', function () {
+            // Click tracker
+        
+            // Add event listener for 'AI CDSS Prediction / Recommendation' link
+            var predictiondetailsLink = document.getElementById('predictiondetailsLink');
+            // console.log('predictiondetailsLink');
+            predictiondetailsLink.addEventListener('click', function () {
+                trackLinkClick('predictiondetailsLink');
+            });
+        
+            // Add event listener for 'IVOS Guidelines' link
+            var guidelinedetailsLink = document.getElementById('guidelinedetailsLink');
+            // console.log('guidelinedetailsLink');
+            guidelinedetailsLink.addEventListener('click', function () {
+                trackLinkClick('guidelinedetailsLink');
+            });
+
             // Function to send AJAX request
             function trackLinkClick(linkId) {
                 var xhr = new XMLHttpRequest();
@@ -401,37 +422,206 @@
                     }
                 }
             }
-        
-            // Add event listener for 'AI CDSS Prediction / Recommendation' link
-            var predictiondetailsLink = document.getElementById('predictiondetailsLink');
-            // console.log('predictiondetailsLink');
-            predictiondetailsLink.addEventListener('click', function () {
-                trackLinkClick('predictiondetailsLink');
+            
+            // Track hovering
+
+            // Variables to track hover start time
+            const table = document.getElementById('vitals-table');
+            const plot = document.getElementById('echarts-container');
+            const card = document.querySelector('.card');
+            const predictionAlert = document.querySelector('.alert[data-alert-id="prediction"]');
+            const guidelineAlert = document.querySelector('.alert[data-alert-id="guideline"]');
+            
+            let hoverStartTime;
+
+             /*// Attach event listeners to the entire table for hover events
+            table.addEventListener('mouseover', function (event) {
+                hoverStartTime = new Date().getTime();
             });
-        
-            // Add event listener for 'IVOS Guidelines' link
-            var guidelinedetailsLink = document.getElementById('guidelinedetailsLink');
-            // console.log('guidelinedetailsLink');
-            guidelinedetailsLink.addEventListener('click', function () {
-                trackLinkClick('guidelinedetailsLink');
+            console.log('table');
+            table.addEventListener('mouseout', function (event) {
+                const hoverEndTime = new Date().getTime();
+                const hoverDuration = (hoverEndTime - hoverStartTime) / 1000; // Convert to seconds
+
+                // Extract relevant information for recording
+                const component = 'entire_vitals_table';
+
+                // Send AJAX request to the server
+                sendHoverEvent(component, hoverDuration);
+            });*/
+
+            // Attach event listeners to each row for hover events
+            const rows = Array.from(table.getElementsByTagName('tr'));
+            console.log('rows:', rows)
+            rows.forEach(row => {
+                // console.log('row:', row)
+                row.addEventListener('mouseover', function (event) {
+                    hoverStartTime = new Date().getTime();
+                });
+                console.log('Hover - table');
+
+                row.addEventListener('mouseout', function (event) {
+                    const hoverEndTime = new Date().getTime();
+                    const hoverDuration = (hoverEndTime - hoverStartTime) / 1000; // Convert to seconds
+
+                    // Extract relevant information for recording
+                    const component = `vitals_table_${row.cells[0].textContent}`; // Updated metric with prefix
+
+                    // Send AJAX request to the server
+                    sendHoverEvent(component, hoverDuration);
+                });
             });
 
-            // Function to get CSRF token from cookies
-            function getCSRFToken() {
-                var name = 'csrftoken';
-                var value = "; " + document.cookie;
-                var parts = value.split("; " + name + "=");
-                if (parts.length === 2) {
-                    return parts.pop().split(";").shift();
+            // Attach event listeners to the echarts plot for hover events
+            plot.addEventListener('mouseover', function (event) {
+                hoverStartTime = new Date().getTime();
+            });
+            console.log('Hover - plot');
+            plot.addEventListener('mouseout', function (event) {
+                const hoverEndTime = new Date().getTime();
+                const hoverDuration = (hoverEndTime - hoverStartTime) / 1000; // Convert to seconds
+
+                // Extract relevant information for recording
+                const component = 'echarts_plot';
+
+                // Send AJAX request to the server
+                sendHoverEvent(component, hoverDuration);
+            });
+
+            /*// Attach event listeners to the card for hover events
+            card.addEventListener('mouseover', function (event) {
+                hoverStartTime = new Date().getTime();
+            });
+            console.log('Hover - card');
+            card.addEventListener('mouseout', function (event) {
+                const hoverEndTime = new Date().getTime();
+                const hoverDuration = (hoverEndTime - hoverStartTime) / 1000; // Convert to seconds
+
+                // Extract relevant information for recording
+                const component = 'patient_card';
+
+                // Send AJAX request to the server
+                sendHoverEvent(component, hoverDuration);
+            });*/
+
+            // Attach event listeners to each definition term (<dt>) for hover events
+            const dtElements = card.querySelectorAll('dt');
+            dtElements.forEach(dt => {
+                dt.addEventListener('mouseover', function (event) {
+                    hoverStartTime = new Date().getTime();
+                });
+                console.log('Hover - dtElements');
+                dt.addEventListener('mouseout', function (event) {
+                    const hoverEndTime = new Date().getTime();
+                    const hoverDuration = (hoverEndTime - hoverStartTime) / 1000; // Convert to seconds
+
+                    // Extract relevant information for recording
+                    const component = `patient_details_${dt.textContent.toLowerCase().replace(/\s+/g, '_')}`;
+
+                    // Send AJAX request to the server (assuming you have a sendHoverEvent function)
+                    sendHoverEvent(component, hoverDuration);
+                });
+            });
+
+            // Attach event listeners to each definition description (<dd>) for hover events
+            const ddElements = card.querySelectorAll('dd');
+            ddElements.forEach(dd => {
+                dd.addEventListener('mouseover', function (event) {
+                    hoverStartTime = new Date().getTime();
+                });
+                console.log('Hover - ddElements');
+                dd.addEventListener('mouseout', function (event) {
+                    const hoverEndTime = new Date().getTime();
+                    const hoverDuration = (hoverEndTime - hoverStartTime) / 1000; // Convert to seconds
+
+                    // Extract relevant information for recording
+                    const component = `patient_details_${dd.previousElementSibling.textContent.toLowerCase().replace(/\s+/g, '_')}`;
+
+                    // Send AJAX request to the server (assuming you have a sendHoverEvent function)
+                    sendHoverEvent(component, hoverDuration);
+                });
+            });
+
+            // Attach event listeners to the predictionAlert for hover events
+            predictionAlert.addEventListener('mouseover', function (event) {
+                hoverStartTime = new Date().getTime();
+            });
+            console.log('Hover - predictionAlert');
+            predictionAlert.addEventListener('mouseout', function (event) {
+                const hoverEndTime = new Date().getTime();
+                const hoverDuration = (hoverEndTime - hoverStartTime) / 1000; // Convert to seconds
+
+                // Extract relevant information for recording
+                const component = 'prediction_alert';
+
+                // Send AJAX request to the server
+                sendHoverEvent(component, hoverDuration);
+            });
+
+            // Attach event listeners to the guidelineAlert for hover events
+            guidelineAlert.addEventListener('mouseover', function (event) {
+                hoverStartTime = new Date().getTime();
+            });
+            console.log('Hover - guidelineAlert');
+            guidelineAlert.addEventListener('mouseout', function (event) {
+                const hoverEndTime = new Date().getTime();
+                const hoverDuration = (hoverEndTime - hoverStartTime) / 1000; // Convert to seconds
+
+                // Extract relevant information for recording
+                const component = 'guideline_alert';
+
+                // Send AJAX request to the server
+                sendHoverEvent(component, hoverDuration);
+            });
+
+            function sendHoverEvent(component, hoverDuration) {
+                const xhr = new XMLHttpRequest();
+                xhr.open('POST', '/record_hover_event/');
+                xhr.setRequestHeader('Content-Type', 'application/json');
+
+                // Include CSRF token in headers
+                const csrfToken = getCSRFToken();
+                if (csrfToken) {
+                    xhr.setRequestHeader('Content-Type', 'application/json');
+                    xhr.setRequestHeader('X-CSRFToken', csrfToken);
+                    // Set the X-Requested-With header
+                    xhr.setRequestHeader('X-Requested-With', 'XMLHttpRequest');
+
+                    // Get patient_id
+                    var patientNameElement = document.getElementById('patientName');
+                    // console.log('patientNameElement', patientNameElement)
+
+                    if (patientNameElement) {
+                        var patientName = patientNameElement.getAttribute('data-name');
+                        // console.log('Patient Name:', patientName);
+        
+                        xhr.onload = function () {
+                            if (xhr.status === 200) {
+                                console.log('Hover event recorded successfully');
+                            }
+                        };
+        
+                        // console.log('We are here!');
+                        xhr.send(JSON.stringify({ component: component, hover_duration: hoverDuration, patientId: patientName }));
+                    }
                 }
-                return null;
-            }
-
-            // Log CSRF token
-            var csrf_token = getCSRFToken();
-            console.log('CSRF token from template:', csrf_token);
+            };
         });
 
+        // Function to get CSRF token from cookies
+        function getCSRFToken() {
+            var name = 'csrftoken';
+            var value = "; " + document.cookie;
+            var parts = value.split("; " + name + "=");
+            if (parts.length === 2) {
+                return parts.pop().split(";").shift();
+            }
+            return null;
+        }
+
+        // Log CSRF token
+        var csrf_token = getCSRFToken();
+        console.log('CSRF token from template:', csrf_token);
     </script>
 </body>
 </html>
