--- a/cdss_1/patients/templates/patients/patient_detail_simple.html
+++ b/cdss_1/patients/templates/patients/patient_detail_simple.html
@@ -149,10 +149,11 @@
         
         <br>
         <br>
+        <!-- IVOS Guidelines -->
         <h2>UKHSA IVOS Guidelines</h2>
         <br>
         <div class="btn-link-container">
-            <a href="https://www.gov.uk/government/publications/antimicrobial-intravenous-to-oral-switch-criteria-for-early-switch/national-antimicrobial-intravenous-to-oral-switch-ivos-criteria-for-early-switch" class="btn btn-dark" target="_blank">Guidelines Link</a>
+            <a id="guidelinesLink" href="https://www.gov.uk/government/publications/antimicrobial-intravenous-to-oral-switch-criteria-for-early-switch/national-antimicrobial-intravenous-to-oral-switch-ivos-criteria-for-early-switch" class="btn btn-dark" target="_blank">Guidelines Link</a>
         </div>
         <br>
         <embed src="{% static 'Final_IV_to_Oral_Switch_Decision_Aid_based_on_NationalCriteria_UKHSA.pdf' %}" type="application/pdf" width="100%" height="600px" />
@@ -249,12 +250,8 @@
         const metrics = vitalsDataJson.map(item => item["Metric / Time (hours)"]);
         const timePoints = Object.keys(vitalsDataJson[0]).filter(key => key !== "Metric / Time (hours)");
 
-        // Initialize ECharts
-        const echartsContainer = document.getElementById('echarts-container');
-        const echartsInstance = echarts.init(echartsContainer);
-
-        // Use the echartsData to create the line plot
-        echartsInstance.setOption({
+        // Set echarts options
+        options = {
             title: {
                 text: ''
             },
@@ -301,7 +298,15 @@
                 yAxisIndex: [0], // Specify the yAxisIndex for y-axis zoom
             },
         ],
-        });
+        };
+
+        // Initialize ECharts
+        // Use the echartsData to create the line plot
+        const echartsContainer = document.getElementById('echarts-container');
+        const echartsInstance = echarts.init(echartsContainer);
+
+        // Set the initial options
+        echartsInstance.setOption(options);
 
         // Add legend click event listener
         echartsInstance.on('legendselectchanged', function (params) {
@@ -314,6 +319,7 @@
             echartsInstance.setOption(options);
         });
 
+        // User form
         document.getElementById('userInputForm').addEventListener('submit', function(event) {
         const dropdown = document.getElementById('switch_choice');
         if (dropdown.value === "") {
@@ -325,6 +331,237 @@
             dropdown.setCustomValidity("");
         }
         });
+
+        // Post other js
+        document.addEventListener('DOMContentLoaded', function () {
+            
+            // Click tracker
+        
+            // Function to send AJAX request
+            function trackLinkClick(linkId) {
+                var xhr = new XMLHttpRequest();
+                xhr.open('POST', '/track_link_click/');
+        
+                // Include CSRF token in headers
+                var csrfToken = getCSRFToken();
+        
+                console.log('csrfToken:', csrfToken);
+        
+                if (csrfToken) {
+                    xhr.setRequestHeader('Content-Type', 'application/json');
+                    xhr.setRequestHeader('X-CSRFToken', csrfToken);
+                    // Set the X-Requested-With header
+                    xhr.setRequestHeader('X-Requested-With', 'XMLHttpRequest');
+
+                    // Get patient_id
+                    var patientNameElement = document.getElementById('patientName');
+                    console.log('patientNameElement', patientNameElement)
+
+                    if (patientNameElement) {
+                        var patientName = patientNameElement.getAttribute('data-name');
+                        console.log('Patient Name:', patientName);
+        
+                        xhr.onload = function () {
+                            if (xhr.status === 200) {
+                                console.log('Link click recorded successfully');
+                            }
+                        };
+        
+                        console.log('We are here!');
+                        xhr.send(JSON.stringify({ linkId: linkId, patientId: patientName }));
+                    }
+                }
+            }
+
+            // Add event listener for 'guidelines' link
+            var guidelinesLink = document.getElementById('guidelinesLink');
+            // console.log('guidelinedetailsLink');
+            guidelinesLink.addEventListener('click', function () {
+                trackLinkClick('guidelinesLink');
+            });
+            
+            // Track hovering
+
+            // Variables to track hover start time
+            const table = document.getElementById('vitals-table');
+            const plot = document.getElementById('echarts-container');
+            const card = document.querySelector('.card');
+            // const guidelinesEmbed = document.querySelector('embed[src*="Final_IV_to_Oral_Switch_Decision_Aid_based_on_NationalCriteria_UKHSA.pdf"]');
+            
+            let hoverStartTime;
+
+             /*// Attach event listeners to the entire table for hover events
+            table.addEventListener('mouseover', function (event) {
+                hoverStartTime = new Date().getTime();
+            });
+            console.log('table');
+            table.addEventListener('mouseout', function (event) {
+                const hoverEndTime = new Date().getTime();
+                const hoverDuration = (hoverEndTime - hoverStartTime) / 1000; // Convert to seconds
+
+                // Extract relevant information for recording
+                const component = 'entire_vitals_table';
+
+                // Send AJAX request to the server
+                sendHoverEvent(component, hoverDuration);
+            });*/
+
+            // Attach event listeners to each row for hover events
+            const rows = Array.from(table.getElementsByTagName('tr'));
+            console.log('rows:', rows)
+            rows.forEach(row => {
+                // console.log('row:', row)
+                row.addEventListener('mouseover', function (event) {
+                    hoverStartTime = new Date().getTime();
+                });
+                console.log('Hover - table');
+
+                row.addEventListener('mouseout', function (event) {
+                    const hoverEndTime = new Date().getTime();
+                    const hoverDuration = (hoverEndTime - hoverStartTime) / 1000; // Convert to seconds
+
+                    // Extract relevant information for recording
+                    const component = `vitals_table_${row.cells[0].textContent}`; // Updated metric with prefix
+
+                    // Send AJAX request to the server
+                    sendHoverEvent(component, hoverDuration);
+                });
+            });
+
+            // Attach event listeners to the echarts plot for hover events
+            plot.addEventListener('mouseover', function (event) {
+                hoverStartTime = new Date().getTime();
+            });
+            console.log('Hover - plot');
+            plot.addEventListener('mouseout', function (event) {
+                const hoverEndTime = new Date().getTime();
+                const hoverDuration = (hoverEndTime - hoverStartTime) / 1000; // Convert to seconds
+
+                // Extract relevant information for recording
+                const component = 'echarts_plot';
+
+                // Send AJAX request to the server
+                sendHoverEvent(component, hoverDuration);
+            });
+
+            /*// Attach event listeners to the card for hover events
+            card.addEventListener('mouseover', function (event) {
+                hoverStartTime = new Date().getTime();
+            });
+            console.log('Hover - card');
+            card.addEventListener('mouseout', function (event) {
+                const hoverEndTime = new Date().getTime();
+                const hoverDuration = (hoverEndTime - hoverStartTime) / 1000; // Convert to seconds
+
+                // Extract relevant information for recording
+                const component = 'patient_card';
+
+                // Send AJAX request to the server
+                sendHoverEvent(component, hoverDuration);
+            });*/
+
+            // Attach event listeners to each definition term (<dt>) for hover events
+            const dtElements = card.querySelectorAll('dt');
+            dtElements.forEach(dt => {
+                dt.addEventListener('mouseover', function (event) {
+                    hoverStartTime = new Date().getTime();
+                });
+                console.log('Hover - dtElements');
+                dt.addEventListener('mouseout', function (event) {
+                    const hoverEndTime = new Date().getTime();
+                    const hoverDuration = (hoverEndTime - hoverStartTime) / 1000; // Convert to seconds
+
+                    // Extract relevant information for recording
+                    const component = `patient_details_${dt.textContent.toLowerCase().replace(/\s+/g, '_')}`;
+
+                    // Send AJAX request to the server (assuming you have a sendHoverEvent function)
+                    sendHoverEvent(component, hoverDuration);
+                });
+            });
+
+            // Attach event listeners to each definition description (<dd>) for hover events
+            const ddElements = card.querySelectorAll('dd');
+            ddElements.forEach(dd => {
+                dd.addEventListener('mouseover', function (event) {
+                    hoverStartTime = new Date().getTime();
+                });
+                console.log('Hover - ddElements');
+                dd.addEventListener('mouseout', function (event) {
+                    const hoverEndTime = new Date().getTime();
+                    const hoverDuration = (hoverEndTime - hoverStartTime) / 1000; // Convert to seconds
+
+                    // Extract relevant information for recording
+                    const component = `patient_details_${dd.previousElementSibling.textContent.toLowerCase().replace(/\s+/g, '_')}`;
+
+                    // Send AJAX request to the server (assuming you have a sendHoverEvent function)
+                    sendHoverEvent(component, hoverDuration);
+                });
+            });
+
+            /*// Attach event listeners to the guidelinesEmbed for hover events
+            guidelinesEmbed.addEventListener('mouseover', function (event) {
+                hoverStartTime = new Date().getTime();
+            });
+            console.log('Hover - guidelinesEmbed');
+            guidelinesEmbed.addEventListener('mouseout', function (event) {
+                const hoverEndTime = new Date().getTime();
+                const hoverDuration = (hoverEndTime - hoverStartTime) / 1000; // Convert to seconds
+
+                // Extract relevant information for recording
+                const component = 'guidelines_pdf';
+
+                // Send AJAX request to the server
+                sendHoverEvent(component, hoverDuration);
+            });*/
+
+            function sendHoverEvent(component, hoverDuration) {
+                const xhr = new XMLHttpRequest();
+                xhr.open('POST', '/record_hover_event/');
+                xhr.setRequestHeader('Content-Type', 'application/json');
+
+                // Include CSRF token in headers
+                const csrfToken = getCSRFToken();
+                if (csrfToken) {
+                    xhr.setRequestHeader('Content-Type', 'application/json');
+                    xhr.setRequestHeader('X-CSRFToken', csrfToken);
+                    // Set the X-Requested-With header
+                    xhr.setRequestHeader('X-Requested-With', 'XMLHttpRequest');
+
+                    // Get patient_id
+                    var patientNameElement = document.getElementById('patientName');
+                    // console.log('patientNameElement', patientNameElement)
+
+                    if (patientNameElement) {
+                        var patientName = patientNameElement.getAttribute('data-name');
+                        // console.log('Patient Name:', patientName);
+        
+                        xhr.onload = function () {
+                            if (xhr.status === 200) {
+                                console.log('Hover event recorded successfully');
+                            }
+                        };
+        
+                        // console.log('We are here!');
+                        xhr.send(JSON.stringify({ component: component, hover_duration: hoverDuration, patientId: patientName }));
+                    }
+                }
+            };
+        });
+
+        // Function to get CSRF token from cookies
+        function getCSRFToken() {
+            var name = 'csrftoken';
+            var value = "; " + document.cookie;
+            var parts = value.split("; " + name + "=");
+            if (parts.length === 2) {
+                return parts.pop().split(";").shift();
+            }
+            return null;
+        }
+
+        // Log CSRF token
+        var csrf_token = getCSRFToken();
+        console.log('CSRF token from template:', csrf_token);
     </script>
 </body>
 </html>
